Added mobile design

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -8,3 +8,14 @@
     @warn 'Invalid breakpoint: #{$breakpoint}.';
   }
 }
+
+@mixin respond-above($breakpoint) {
+  @if map-has-key($breakpoints, $breakpoint) {
+    $breakpoint-value: map-get($breakpoints, $breakpoint);
+    @media (min-width: $breakpoint-value) {
+      @content;
+    }
+  } @else {
+    @warn 'Invalid breakpoint: #{$breakpoint}.';
+  }
+}
