improved lighthouse scores

--- a/tailwind.css
+++ b/tailwind.css
@@ -9,6 +9,13 @@ a {
   font-family: 'Walter Turncoat', 'Prodigy Sans', sans-serif;
 }
 
+@font-face {
+  font-family: 'Plus Jakarta Display';
+  src: url(/fonts/PlusJakartaDisplay-Regular.ttf) format('truetype');
+  font-display: swap;
+  font-weight: normal;
+}
+
 @tailwind components;
 
 @tailwind utilities;
