--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,3 +8,75 @@
     /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('/fonts/nanum-pen-script-v15-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
+
+@font-face {
+  font-family: 'Plus Jakarta Display';
+  src: url('/fonts/PlusJakartaDisplay-Light.woff2') format('woff2'),
+    url('/fonts/PlusJakartaDisplay-Light.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Plus Jakarta Display';
+  src: url('/fonts/PlusJakartaDisplay-LightItalic.woff2') format('woff2'),
+    url('/fonts/PlusJakartaDisplay-LightItalic.woff') format('woff');
+  font-weight: 300;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Plus Jakarta Display';
+  src: url('/fonts/PlusJakartaDisplay-Regular.woff2') format('woff2'),
+    url('/fonts/PlusJakartaDisplay-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Plus Jakarta Display';
+  src: url('/fonts/PlusJakartaDisplay-Italic.woff2') format('woff2'),
+    url('/fonts/PlusJakartaDisplay-Italic.woff') format('woff');
+  font-weight: normal;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Plus Jakarta Display';
+  src: url('/fonts/PlusJakartaDisplay-Medium.woff2') format('woff2'),
+    url('/fonts/PlusJakartaDisplay-Medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Plus Jakarta Display';
+  src: url('/fonts/PlusJakartaDisplay-MediumItalic.woff2') format('woff2'),
+    url('/fonts/PlusJakartaDisplay-MediumItalic.woff') format('woff');
+  font-weight: 500;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Plus Jakarta Display';
+  src: url('/fonts/PlusJakartaDisplay-Bold.woff2') format('woff2'),
+    url('/fonts/PlusJakartaDisplay-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Plus Jakarta Display';
+  src: url('/fonts/PlusJakartaDisplay-BoldItalic.woff2') format('woff2'),
+    url('/fonts/PlusJakartaDisplay-BoldItalic.woff') format('woff');
+  font-weight: bold;
+  font-style: italic;
+  font-display: swap;
+}
